[gd_scene load_steps=35 format=2]

[ext_resource path="res://Enemies/Slime_strip4.png" type="Texture" id=1]
[ext_resource path="res://Overlap/Hurtboxes.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/ObstacleDetection.tscn" type="PackedScene" id=3]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://Overlap/SoftCollision.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=7]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=8]
[ext_resource path="res://Enemies/Slime.gd" type="Script" id=9]
[ext_resource path="res://Shadows/LargeShadow.png" type="Texture" id=10]
[ext_resource path="res://Overlap/SlimeHitbox.gd" type="Script" id=11]
[ext_resource path="res://Effects/enemyfx_strip9.png" type="Texture" id=12]
[ext_resource path="res://UI/EnemyHPbar.tscn" type="PackedScene" id=13]

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 12 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 12 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 12 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 12 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 12 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 12 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 12 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 12 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=29]
animations = [ {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "Move",
"speed": 4.0
} ]

[sub_resource type="CapsuleShape2D" id=18]
height = 4.0

[sub_resource type="CapsuleShape2D" id=8]
radius = 13.0
height = 4.0

[sub_resource type="CircleShape2D" id=9]
radius = 176.182

[sub_resource type="CircleShape2D" id=10]
radius = 11.0

[sub_resource type="CapsuleShape2D" id=19]
radius = 9.0
height = 16.0

[sub_resource type="CapsuleShape2D" id=12]
radius = 13.0
height = 0.0

[node name="Slime" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 9 )
MAX_SPEED = 15

[node name="EnemyHPbar" parent="." instance=ExtResource( 13 )]
margin_left = -12.0
margin_top = -19.0
margin_right = -12.0
margin_bottom = -19.0

[node name="Hpbar" parent="EnemyHPbar" index="0"]
self_modulate = Color( 1, 1, 1, 0.627451 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 1, -4 )
scale = Vector2( 0.8125, 1 )
frames = SubResource( 29 )
frame = 2
playing = true

[node name="ShadowSprite" type="Sprite" parent="."]
position = Vector2( 0, 8 )
scale = Vector2( 0.9375, 0.85 )
texture = ExtResource( 10 )

[node name="AnimationSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 8 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 17 )
animation = "Move"
frame = 2
playing = true
offset = Vector2( 0, -8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 18 )

[node name="Hurtboxes" parent="." instance=ExtResource( 2 )]
visible = false
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtboxes" index="0"]
position = Vector2( 0, 1 )
shape = SubResource( 8 )

[node name="Stats" parent="." instance=ExtResource( 8 )]
max_health = 10.0

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 5 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.392157 )
shape = SubResource( 9 )

[node name="Hitbox" parent="." instance=ExtResource( 4 )]
collision_mask = 4
script = ExtResource( 11 )
damage = 2

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -2 )
shape = SubResource( 10 )

[node name="SoftCollision" parent="." instance=ExtResource( 6 )]
visible = false
collision_mask = 33

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 0, 10 )
rotation = 1.5708
shape = SubResource( 19 )

[node name="WanderController" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 0, -3 )

[node name="ObstacleDetection" parent="." instance=ExtResource( 3 )]
visible = false
collision_layer = 0

[node name="CollisionShape2D" parent="ObstacleDetection" index="0"]
shape = SubResource( 12 )

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="Hurtboxes" to="." method="_on_Hurtboxes_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="EnemyHPbar"]
[editable path="Hurtboxes"]
[editable path="PlayerDetectionZone"]
[editable path="Hitbox"]
[editable path="SoftCollision"]
[editable path="WanderController"]
[editable path="ObstacleDetection"]
